@@ -1,3 +1,7 @@
+2008-12-18 Og Maciel <ogmaciel@gnome.org>
+
+	* src/lib/scheduler.py: Handle end dates set in the past and added tests.
+
 2008-11-20 Og Maciel <ogmaciel@gnome.org>
 
 	* src/gui/adddialog.py: Handle adding repeating records.
